tests/fixtures/functional_patterns/negative/n01_for_loop.rs
fn imperative_sum(items: Vec<i32>) -> i32 {
    let mut sum = 0;
    for item in items {
        sum += item;
    }
    sum
}
